# Agentic-Monte-Carlo

./: .gitignore  README.md  main.py  pyproject.toml
envs/AgentGym/agentenv-babyai/: pyproject.toml
envs/AgentGym/agentenv-sciworld/: pyproject.toml
envs/AgentGym/agentenv-textcraft/: pyproject.toml
envs/AgentGym/agentenv-textcraft/agentenv_textcraft/: crafting_tree.py  environment.py  utils.py
envs/AgentGym/agentenv-tool/Toolusage/: requirements.txt
envs/AgentGym/agentenv-webshop/: README.md  pyproject.toml
envs/AgentGym/agentenv/agentenv/controller/: agent.py  task.py  types.py  utils.py
envs/AgentGym/agentenv/agentenv/envs/: sciworld.py  webshop.py
movie_idx/: test_idx.json  train_idx.json
sciworld_idx/: sciworld_test_idx.json  sciworld_train_idx.json
scripts/: setup.sh
smc/: bootstrap_filter.py  clients.py  policy.py  prompts.py  smc.py  train_lora_regression.py  traj_train_convert.py
smc/agents/: agent.py  movie.py  sciworld.py  weather.py  webshop.py
smc/utils/: action_utils.py  logging_utils.py
smc/value_function/: value_function.py  value_function_foa.py
textcraft_idx/: textcraft_crafting_depths.csv  textcraft_test_ids.csv  textcraft_train_ids.csv
weather_idx/: test_idx.json  train_idx.json
webshop_idx/: test_idx.json  train_idx.json
