[project]
name = "smc-llm-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate==1.10.0",
    "datasets>=4.0.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "mlflow>=3.3.2",
    "numpy>=2.3.2",
    "openai>=1.107.2",
    "pandas>=2.3.1",
    "peft>=0.17.1",
    "pydantic>=2.11.7",
    "tenacity>=9.1.2",
    "torch==2.8.0",
    "transformers==4.55.0",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "smc"

[dependency-groups]
dev = [
    "fastapi[all]>=0.116.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "requests>=2.32.4",
    "ruff>=0.12.7",
]
test = []
